src/ffi/python/nil_service.py


def _configure_signatures(lib: Any) -> None:
    """Configure ctypes signatures for all library functions."""
    lib.nil_service_gateway_add_service.argtypes = [
        nil_serviceGateway,
        nil_serviceEvent,
    ]
    lib.nil_service_gateway_add_service.restype = None

    lib.nil_service_runnable_run.argtypes = [nil_serviceRunnable]
    lib.nil_service_runnable_run.restype = None

    lib.nil_service_runnable_poll.argtypes = [nil_serviceRunnable]
    lib.nil_service_runnable_poll.restype = None

    lib.nil_service_runnable_stop.argtypes = [nil_serviceRunnable]
    lib.nil_service_runnable_stop.restype = None

    lib.nil_service_runnable_restart.argtypes = [nil_serviceRunnable]
    lib.nil_service_runnable_restart.restype = None

    lib.nil_service_runnable_dispatch.argtypes = [
        nil_serviceRunnable,
        nil_serviceDispatchInfo,
    ]
    lib.nil_service_runnable_dispatch.restype = None

    lib.nil_service_id_to_string.argtypes = [
        nil_serviceId,
        ctypes.c_char_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_id_to_string.restype = ctypes.c_uint64

    lib.nil_service_message_publish.argtypes = [
        nil_serviceMessage,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_message_publish.restype = None

    lib.nil_service_message_publish_ex.argtypes = [
        nil_serviceId,
        nil_serviceMessage,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_message_publish_ex.restype = None

    lib.nil_service_message_send.argtypes = [
        nil_serviceId,
        nil_serviceMessage,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_message_send.restype = None

    lib.nil_service_message_publish_ex_ids.argtypes = [
        nil_serviceIds,
        nil_serviceMessage,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_message_publish_ex_ids.restype = None

    lib.nil_service_message_send_ids.argtypes = [
        nil_serviceIds,
        nil_serviceMessage,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_message_send_ids.restype = None

    lib.nil_service_callback_on_ready.argtypes = [
        nil_serviceCallback,
        nil_serviceCallbackInfo,
    ]
    lib.nil_service_callback_on_ready.restype = None

    lib.nil_service_callback_on_connect.argtypes = [
        nil_serviceCallback,
        nil_serviceCallbackInfo,
    ]
    lib.nil_service_callback_on_connect.restype = None

    lib.nil_service_callback_on_disconnect.argtypes = [
        nil_serviceCallback,
        nil_serviceCallbackInfo,
    ]
    lib.nil_service_callback_on_disconnect.restype = None

    lib.nil_service_callback_on_message.argtypes = [
        nil_serviceCallback,
        nil_serviceMsgCallbackInfo,
    ]
    lib.nil_service_callback_on_message.restype = None

    lib.nil_service_web_on_ready.argtypes = [
        nil_serviceWeb,
        nil_serviceCallbackInfo,
    ]
    lib.nil_service_web_on_ready.restype = None

    lib.nil_service_web_on_get.argtypes = [
        nil_serviceWeb,
        nil_serviceWebGetCallbackInfo,
    ]
    lib.nil_service_web_on_get.restype = None

    lib.nil_service_web_use_ws.argtypes = [nil_serviceWeb, ctypes.c_char_p]
    lib.nil_service_web_use_ws.restype = nil_serviceEvent

    lib.nil_service_web_transaction_set_content_type.argtypes = [
        nil_serviceWebTransaction,
        ctypes.c_char_p,
    ]
    lib.nil_service_web_transaction_set_content_type.restype = None

    lib.nil_service_web_transaction_send.argtypes = [
        nil_serviceWebTransaction,
        ctypes.c_void_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_web_transaction_send.restype = None

    lib.nil_service_web_transaction_get_route.argtypes = [
        nil_serviceWebTransaction,
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.nil_service_web_transaction_get_route.restype = ctypes.c_char_p

    lib.nil_service_event_to_message.argtypes = [nil_serviceEvent]
    lib.nil_service_event_to_message.restype = nil_serviceMessage

    lib.nil_service_event_to_callback.argtypes = [nil_serviceEvent]
    lib.nil_service_event_to_callback.restype = nil_serviceCallback

    lib.nil_service_gateway_to_event.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_to_event.restype = nil_serviceEvent

    lib.nil_service_gateway_to_message.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_to_message.restype = nil_serviceMessage

    lib.nil_service_gateway_to_callback.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_to_callback.restype = nil_serviceCallback

    lib.nil_service_gateway_to_runnable.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_to_runnable.restype = nil_serviceRunnable

    lib.nil_service_gateway_to_standalone.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_to_standalone.restype = nil_serviceStandalone

    lib.nil_service_standalone_to_message.argtypes = [nil_serviceStandalone]
    lib.nil_service_standalone_to_message.restype = nil_serviceMessage

    lib.nil_service_standalone_to_callback.argtypes = [nil_serviceStandalone]
    lib.nil_service_standalone_to_callback.restype = nil_serviceCallback

    lib.nil_service_standalone_to_event.argtypes = [nil_serviceStandalone]
    lib.nil_service_standalone_to_event.restype = nil_serviceEvent

    lib.nil_service_standalone_to_runnable.argtypes = [nil_serviceStandalone]
    lib.nil_service_standalone_to_runnable.restype = nil_serviceRunnable

    lib.nil_service_web_to_runnable.argtypes = [nil_serviceWeb]
    lib.nil_service_web_to_runnable.restype = nil_serviceRunnable

    lib.nil_service_create_udp_client.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_udp_client.restype = nil_serviceStandalone

    lib.nil_service_create_udp_server.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_udp_server.restype = nil_serviceStandalone

    lib.nil_service_create_tcp_client.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_tcp_client.restype = nil_serviceStandalone

    lib.nil_service_create_tcp_server.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_tcp_server.restype = nil_serviceStandalone

    lib.nil_service_create_ws_client.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_char_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_ws_client.restype = nil_serviceStandalone

    lib.nil_service_create_ws_server.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_char_p,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_ws_server.restype = nil_serviceStandalone

    lib.nil_service_create_http_server.argtypes = [
        ctypes.c_char_p,
        ctypes.c_uint16,
        ctypes.c_uint64,
    ]
    lib.nil_service_create_http_server.restype = nil_serviceWeb

    lib.nil_service_create_gateway.argtypes = []
    lib.nil_service_create_gateway.restype = nil_serviceGateway

    lib.nil_service_gateway_destroy.argtypes = [nil_serviceGateway]
    lib.nil_service_gateway_destroy.restype = None

    lib.nil_service_web_destroy.argtypes = [nil_serviceWeb]
    lib.nil_service_web_destroy.restype = None

    lib.nil_service_standalone_destroy.argtypes = [nil_serviceStandalone]
    lib.nil_service_standalone_destroy.restype = None


def _create_lib_fns(refs: Dict[int, Any], lib: Any) -> dict:
    """Create the callback function handlers."""
    
    libc = ctypes.CDLL(None)
    libc.malloc.argtypes = [ctypes.c_size_t]
    libc.malloc.restype = ctypes.c_void_p
    libc.free.argtypes = [ctypes.c_void_p]
    libc.free.restype = None

    @NIL_SERVICE_CALLBACK_EXEC
    def callback_exec(id_ptr: Any, ctx_id: Any) -> None:
        if not ctx_id or not id_ptr:
            return
        ref_id = _to_ref_id(ctx_id)
        if ref_id not in refs:
            return
        callback_data = refs[ref_id]
        id_obj = ID(id_ptr.contents, lib)
        callback_data.fn(id_obj)

    @NIL_SERVICE_MSG_CALLBACK_EXEC
    def msg_callback_exec(id_ptr: Any, data: Any, size: Any, ctx_id: Any) -> None:
        if not ctx_id or not id_ptr or not data:
            return
        ref_id = _to_ref_id(ctx_id)
        if ref_id not in refs:
            return
        callback_data = refs[ref_id]
        id_obj = ID(id_ptr.contents, lib)
        msg_data = ctypes.string_at(data, size)
        callback_data.fn(id_obj, msg_data)

    @NIL_SERVICE_DISPATCH_EXEC
    def dispatch_exec(ctx_id: Any) -> None:
        if not ctx_id:
            return
        ref_id = _to_ref_id(ctx_id)
        if ref_id not in refs:
            return
        callback_data = refs[ref_id]
        callback_data.fn()

    @NIL_SERVICE_WEB_GET_CALLBACK_EXEC
    def web_get_callback_exec(transaction: Any, ctx_id: Any) -> int:
        if not ctx_id:
            return 0
        ref_id = _to_ref_id(ctx_id)
        if ref_id not in refs:
            return 0
        callback_data = refs[ref_id]
        trans_obj = WebTransaction(transaction, lib)
        result = callback_data.fn(trans_obj)
        return 1 if result else 0

    @NIL_SERVICE_CLEANUP
    def cleanup(ctx_id: Any) -> None:
        if ctx_id:
            ref_id = _to_ref_id(ctx_id)
            refs.pop(ref_id, None)
            libc.free(ctx_id)

    def store_callback(fn: Callable[..., Any]) -> Any:
        """Store a callback and return a pointer to it."""
        ctx_id = libc.malloc(1)
        if not ctx_id:
            raise MemoryError("malloc failed")
        refs[_to_ref_id(ctx_id)] = _CallbackState(fn=fn)
        return ctx_id

    return {
        "callback_exec": callback_exec,
        "msg_callback_exec": msg_callback_exec,
        "dispatch_exec": dispatch_exec,
        "web_get_callback_exec": web_get_callback_exec,
        "cleanup": cleanup,
        "store_callback": store_callback,
    }


class Module:
    """Main module for creating nil-service services."""

    def __init__(self) -> None:
        lib_path = Path(__file__).resolve().parent / "libservice-c-api.so"
        self._lib = ctypes.CDLL(str(lib_path))
        _configure_signatures(self._lib)

        self._refs: Dict[int, Any] = {}
        self._fns = _create_lib_fns(self._refs, self._lib)

    def create_gateway(self) -> Gateway:
        """Create a gateway service."""
        gateway = self._lib.nil_service_create_gateway()
        return Gateway(gateway, self._lib, self._fns, self._refs)

    def create_udp_client(
        self, host: str, port: int, buffer: int
    ) -> Standalone:
        """Create a UDP client service."""
        standalone = self._lib.nil_service_create_udp_client(
            host.encode("utf-8"), port, buffer
        )
        return Standalone(standalone, self._lib, self._fns, self._refs)

    def create_udp_server(
        self, host: str, port: int, buffer: int
    ) -> Standalone:
        """Create a UDP server service."""
        standalone = self._lib.nil_service_create_udp_server(
            host.encode("utf-8"), port, buffer
        )
        return Standalone(standalone, self._lib, self._fns, self._refs)

    def create_tcp_client(self, host: str, port: int, buffer: int) -> Standalone:
        """Create a TCP client service."""
        standalone = self._lib.nil_service_create_tcp_client(
            host.encode("utf-8"), port, buffer
        )
        return Standalone(standalone, self._lib, self._fns, self._refs)

    def create_tcp_server(self, host: str, port: int, buffer: int) -> Standalone:
        """Create a TCP server service."""
        standalone = self._lib.nil_service_create_tcp_server(
            host.encode("utf-8"), port, buffer
        )
        return Standalone(standalone, self._lib, self._fns, self._refs)
